<resources>
    <string name="app_name">Shopooze</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_cart">Cart</string>
    <string name="nav_pending_cart">Pending Cart</string>
    <string name="nav_category">Category</string>
    <string name="nav_products">Products</string>
    <string name="nav_category_products">Category and Products</string>
    <string name="nav_counterfoil">Counterfoil</string>
    <string name="nav_bill_list">  Bill list</string>
    <string name="nav_remain_payment_list">Remain Payment list</string>
    <string name="nav_payment_list">Payment list</string>
    <string name="nav_expense_list">Expense list</string>
    <string name="nav_sales_return">Sales return</string>
    <string name="nav_vendor_and_customer">Vendor and Customer</string>
    <string name="nav_customers">Customers</string>
    <string name="nav_vendor_list"> Vendor list</string>
    <string name="nav_purchase_list">Purchase list</string>
    <string name="nav_purchase_return">Purchase return</string>
    <string name="nav_general">General</string>
    <string name="nav_report">Report</string>
    <string name="nav_app_manual">App Manual</string>
    <string name="nav_contact_Us">Contact Us</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_login">Login</string>
    <string name="nav_logout">Logout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repassword">Repassword</string>
    <string name="email">Email</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="forgetpassword">Forget Password?</string>
    <string name="loginTosignup">Don\'t have an account? Sign Up</string>
    <string name="signupTologin">Already have an account? Sign In</string>
    <string name="products">Product Name</string>
    <string name="products_category">Category</string>
    <string name="products_rate">Rate</string>
    <string name="products_qty">Qty</string>
    <string name="products_mrp">MRP</string>
    <string name="product_unit_weight">Unit</string>
    <string name="product_qty">Qty</string>
    <string name="products_unit">Unit</string>
    <string name="products_barcode">Barcode</string>
    <string name="products_sgst">SGST(%)</string>
    <string name="products_gst">GST(%)</string>
    <string name="products_hsn">HSN</string>
    <string name="products_discount">Discount(%)</string>
    <string name="products_discount_expiry">Expires in date</string>
    <string name="products_discount_applicable">Discount applicable min qty</string>
    <string name="add">ADD</string>
    <string name="products_cgst">CGST(%)</string>
    <string name="name">Name</string>
    <string name="company_name">Company Name</string>
    <string name="nav_contact">Contact Number</string>
    <string name="gst_number">GST Number</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="job">Job Title</string>
    <string name="postal_code">Postal Code</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="selling_price">Selling Price</string>
    <string name="p">Text is available under the Creative Commons Attribution-ShareAlike License; additional terms may apply. By using this site, you agree to the Terms of Use and Privacy Policy. Wikipedia® is a registered trademark of the Wikimedia Foundation, Inc., a non-profit organization.</string>
    <string name="phone">Phone No.</string>
    <string name="web_link">Website_link</string>
    <string name="add_product">Add Product</string>
    <string name="str_unit">Unit</string>
    <string name="str_stock">Stock</string>
    <string name="todo">TODO</string>
    <string name="str_is_gst_included">Is GST included</string>
    <string name="str_product_gst_slab">Product from 0% GST slab</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>